--- a/io7m-jboxes-documentation/pom.xml
+++ b/io7m-jboxes-documentation/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.io7m.jboxes</groupId>
     <artifactId>io7m-jboxes</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0-SNAPSHOT</version>
   </parent>
   <artifactId>io7m-jboxes-documentation</artifactId>
 
